--- a/index.html
+++ b/index.html
@@ -215,5 +215,17 @@
       <a href="#" class="more">More</a>
     </div>
     <!-- End Portfolio -->
+    <!-- Start Video -->
+    <div class="video">
+      <video autoplay muted loop>
+        <source src="videos/awesome-video.mp4" type="video/mp4" />
+      </video>
+      <div class="text">
+        <h2>Super Awesome Video Here</h2>
+        <p>Its All You Need</p>
+        <button>See More</button>
+      </div>
+    </div>
+    <!-- End Video -->
   </body>
 </html>  
